engr441/while-infer/tests/valid/While_Valid_4.while
int[] trim(int[] ls, int n) {
    int i = 0;
    int[] rs = [0;n];

    while(i < n) {
        rs[i] = ls[i];
        i = i + 1;
    }
    return rs;
}

void main() {
    int[] rs = trim([-2,-3,1,2,-23,3,2345,4,5],4);
    assert rs == [-2,-3,1,2];
}
