engr441/while-infer/tests/invalid-deadcode/UnreachableCode_Invalid_5.while
bool contains(int[] xs, int x) {
    for(int i=0;i<|xs|;i=i+1) {
	if(xs[i] == x) {
	    return true;
	    break;
	}
    }

    return false;
}
